src-tauri/tests/snapshots/schema_migrations__repo_run_actions_stop_command_migration.snap
---
source: tests/schema_migrations.rs
expression: repo_run_actions_stop_columns(&connection)
---
- - stop_command
  - TEXT
  - 0
  - ~
