src-tauri/tests/snapshots/schema_migrations__repos_review_migration_add.snap
---
source: tests/schema_migrations.rs
expression: repos_review_columns(&connection)
---
- - custom_prompt_review
  - TEXT
