src-tauri/tests/snapshots/schema_migrations__repos_review_pr_migration.snap
---
source: tests/schema_migrations.rs
expression: repos_review_pr_columns(&connection)
---
- - custom_prompt_review_pr
  - TEXT
