src-tauri/tests/snapshots/schema_migrations__workspaces_parent_workspace_id_migration.snap
---
source: tests/schema_migrations.rs
expression: workspaces_parent_workspace_id_columns(&connection)
---
- - parent_workspace_id
  - TEXT
  - 0
  - ~
