src-tauri/tests/snapshots/schema_migrations__workspaces_port_range_migration.snap
---
source: tests/schema_migrations.rs
expression: workspaces_port_columns(&connection)
---
- - port_base
  - INTEGER
  - 0
  - ~
- - port_count
  - INTEGER
  - 0
  - ~
