src-tauri/tests/snapshots/schema_migrations__workspaces_setup_completed_at_migration.snap
---
source: tests/schema_migrations.rs
expression: workspaces_setup_completed_at_columns(&connection)
---
- - setup_completed_at
  - TEXT
  - 0
  - ~
